z-index fixes

--- a/src/app/comps/info-row/info-row.component.scss
+++ b/src/app/comps/info-row/info-row.component.scss
@@ -1,40 +1,42 @@
-:host{
-    min-width: 172px;
-    max-width: 220px;
-    height: 50px;
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    gap: 10px;
-    font-size: 15px;
-    color: black;
-    flex: 0.5;
-    border-radius: 10px;
-    padding: 5px 30px;
-    position: relative;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+:host {
+  min-width: 172px;
+  max-width: 220px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-size: 15px;
+  color: black;
+  flex: 0.5;
+  border-radius: 10px;
+  padding: 5px 30px;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  z-index: 2;
+  background-color: rgb(252, 243, 224);
 }
 
-img{
-    height: 30px;
-    width: 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
+img {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  top: 0;
+  left: 5px;
 }
 
-p{
-    font-family: 'titleFont';
+p {
+  font-family: "titleFont";
 }
 
-div{
-    border-radius: 20px;
-    height: 40px;
-    aspect-ratio: 1/1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
-    font-family: 'mainFont';
-    padding: 3px;
+div {
+  border-radius: 20px;
+  height: 40px;
+  aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
+  font-family: "mainFont";
+  padding: 3px;
 }
