--- a/src/app/pages/fleet/fleet.component.scss
+++ b/src/app/pages/fleet/fleet.component.scss
@@ -126,7 +126,7 @@
   border-radius: 20px;
   margin-top: 40px;
   z-index: 2;
-  background-color: white;
+  background-color: transparent;
   .title {
     position: absolute;
     top: -11px;
